// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:App matches the snapshot 1`] = `
<StyledApp>
  <Board>
    <Square
      handleClick={[Function]}
      index={0}
      key="0"
    />
    <Square
      handleClick={[Function]}
      index={1}
      key="1"
    />
    <Square
      handleClick={[Function]}
      index={2}
      key="2"
    />
    <Square
      handleClick={[Function]}
      index={3}
      key="3"
    />
    <Square
      handleClick={[Function]}
      index={4}
      key="4"
    />
    <Square
      handleClick={[Function]}
      index={5}
      key="5"
    />
    <Square
      handleClick={[Function]}
      index={6}
      key="6"
    />
    <Square
      handleClick={[Function]}
      index={7}
      key="7"
    />
    <Square
      handleClick={[Function]}
      index={8}
      key="8"
    />
  </Board>
</StyledApp>
`;

exports[`components:App matches the snapshot with three moves: center, top-left, top-right 1`] = `
<StyledApp>
  <Board>
    <Square
      index={0}
      key="0"
      player="o"
    />
    <Square
      handleClick={[Function]}
      index={1}
      key="1"
    />
    <Square
      index={2}
      key="2"
      player="x"
    />
    <Square
      handleClick={[Function]}
      index={3}
      key="3"
    />
    <Square
      index={4}
      key="4"
      player="x"
    />
    <Square
      handleClick={[Function]}
      index={5}
      key="5"
    />
    <Square
      handleClick={[Function]}
      index={6}
      key="6"
    />
    <Square
      handleClick={[Function]}
      index={7}
      key="7"
    />
    <Square
      handleClick={[Function]}
      index={8}
      key="8"
    />
  </Board>
</StyledApp>
`;
